[package]
name    = "howmuch"
version = "0.1.2"
license = "MIT"
authors = ["Anton Dutov <anton.dutov@gmail.com>"]
description = "Measure elapsed time by tagged sections"
repository  = "https://github.com/anton-dutov/howmuch-rs"
readme      = "README.md"

[dependencies]
log = "0.4"


[[example]]
name = "simple"
